template-immersonday.yml
Resources:
  Vpc8378EB38:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: ImmersiondayStack/Vpc
    Metadata:
      aws:cdk:path: ImmersiondayStack/Vpc/Resource
  VpcpublicSubnet1Subnet2BB74ED7:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/24
      VpcId:
        Ref: Vpc8378EB38
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: ImmersiondayStack/Vpc/publicSubnet1
    Metadata:
      aws:cdk:path: ImmersiondayStack/Vpc/publicSubnet1/Subnet
  VpcpublicSubnet1RouteTable15C15F8E:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: Vpc8378EB38
      Tags:
        - Key: Name
          Value: ImmersiondayStack/Vpc/publicSubnet1
    Metadata:
      aws:cdk:path: ImmersiondayStack/Vpc/publicSubnet1/RouteTable
  VpcpublicSubnet1RouteTableAssociation4E83B6E4:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VpcpublicSubnet1RouteTable15C15F8E
      SubnetId:
        Ref: VpcpublicSubnet1Subnet2BB74ED7
    Metadata:
      aws:cdk:path: ImmersiondayStack/Vpc/publicSubnet1/RouteTableAssociation
  VpcpublicSubnet1DefaultRouteB88F9E93:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: VpcpublicSubnet1RouteTable15C15F8E
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: VpcIGWD7BA715C
    DependsOn:
      - VpcVPCGWBF912B6E
    Metadata:
      aws:cdk:path: ImmersiondayStack/Vpc/publicSubnet1/DefaultRoute
  VpcpublicSubnet1EIP411541E6:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: ImmersiondayStack/Vpc/publicSubnet1
    Metadata:
      aws:cdk:path: ImmersiondayStack/Vpc/publicSubnet1/EIP
  VpcpublicSubnet1NATGatewayA036E8A6:
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId:
        Ref: VpcpublicSubnet1Subnet2BB74ED7
      AllocationId:
        Fn::GetAtt:
          - VpcpublicSubnet1EIP411541E6
          - AllocationId
      Tags:
        - Key: Name
          Value: ImmersiondayStack/Vpc/publicSubnet1
    Metadata:
      aws:cdk:path: ImmersiondayStack/Vpc/publicSubnet1/NATGateway
  VpcpublicSubnet2SubnetE34B022A:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.1.0/24
      VpcId:
        Ref: Vpc8378EB38
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: ImmersiondayStack/Vpc/publicSubnet2
    Metadata:
      aws:cdk:path: ImmersiondayStack/Vpc/publicSubnet2/Subnet
  VpcpublicSubnet2RouteTableC5A6DF77:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: Vpc8378EB38
      Tags:
        - Key: Name
          Value: ImmersiondayStack/Vpc/publicSubnet2
    Metadata:
      aws:cdk:path: ImmersiondayStack/Vpc/publicSubnet2/RouteTable
  VpcpublicSubnet2RouteTableAssociationCCE257FF:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VpcpublicSubnet2RouteTableC5A6DF77
      SubnetId:
        Ref: VpcpublicSubnet2SubnetE34B022A
    Metadata:
      aws:cdk:path: ImmersiondayStack/Vpc/publicSubnet2/RouteTableAssociation
  VpcpublicSubnet2DefaultRoute732F0BEB:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: VpcpublicSubnet2RouteTableC5A6DF77
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: VpcIGWD7BA715C
    DependsOn:
      - VpcVPCGWBF912B6E
    Metadata:
      aws:cdk:path: ImmersiondayStack/Vpc/publicSubnet2/DefaultRoute
  VpcpublicSubnet2EIP811E07A7:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: ImmersiondayStack/Vpc/publicSubnet2
    Metadata:
      aws:cdk:path: ImmersiondayStack/Vpc/publicSubnet2/EIP
  VpcpublicSubnet2NATGateway4A29FD4F:
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId:
        Ref: VpcpublicSubnet2SubnetE34B022A
      AllocationId:
        Fn::GetAtt:
          - VpcpublicSubnet2EIP811E07A7
          - AllocationId
      Tags:
        - Key: Name
          Value: ImmersiondayStack/Vpc/publicSubnet2
    Metadata:
      aws:cdk:path: ImmersiondayStack/Vpc/publicSubnet2/NATGateway
  VpcprivateSubnet1SubnetCEAD3716:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.2.0/24
      VpcId:
        Ref: Vpc8378EB38
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: ImmersiondayStack/Vpc/privateSubnet1
    Metadata:
      aws:cdk:path: ImmersiondayStack/Vpc/privateSubnet1/Subnet
  VpcprivateSubnet1RouteTable1979EACB:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: Vpc8378EB38
      Tags:
        - Key: Name
          Value: ImmersiondayStack/Vpc/privateSubnet1
    Metadata:
      aws:cdk:path: ImmersiondayStack/Vpc/privateSubnet1/RouteTable
  VpcprivateSubnet1RouteTableAssociationEEBD93CE:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VpcprivateSubnet1RouteTable1979EACB
      SubnetId:
        Ref: VpcprivateSubnet1SubnetCEAD3716
    Metadata:
      aws:cdk:path: ImmersiondayStack/Vpc/privateSubnet1/RouteTableAssociation
  VpcprivateSubnet1DefaultRouteB506891A:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: VpcprivateSubnet1RouteTable1979EACB
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: VpcpublicSubnet1NATGatewayA036E8A6
    Metadata:
      aws:cdk:path: ImmersiondayStack/Vpc/privateSubnet1/DefaultRoute
  VpcprivateSubnet2Subnet2DE7549C:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.3.0/24
      VpcId:
        Ref: Vpc8378EB38
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: ImmersiondayStack/Vpc/privateSubnet2
    Metadata:
      aws:cdk:path: ImmersiondayStack/Vpc/privateSubnet2/Subnet
  VpcprivateSubnet2RouteTable4D0FFC8C:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: Vpc8378EB38
      Tags:
        - Key: Name
          Value: ImmersiondayStack/Vpc/privateSubnet2
    Metadata:
      aws:cdk:path: ImmersiondayStack/Vpc/privateSubnet2/RouteTable
  VpcprivateSubnet2RouteTableAssociationB691E645:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VpcprivateSubnet2RouteTable4D0FFC8C
      SubnetId:
        Ref: VpcprivateSubnet2Subnet2DE7549C
    Metadata:
      aws:cdk:path: ImmersiondayStack/Vpc/privateSubnet2/RouteTableAssociation
  VpcprivateSubnet2DefaultRouteBAC3C1C3:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: VpcprivateSubnet2RouteTable4D0FFC8C
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: VpcpublicSubnet2NATGateway4A29FD4F
    Metadata:
      aws:cdk:path: ImmersiondayStack/Vpc/privateSubnet2/DefaultRoute
  VpcIGWD7BA715C:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: ImmersiondayStack/Vpc
    Metadata:
      aws:cdk:path: ImmersiondayStack/Vpc/IGW
  VpcVPCGWBF912B6E:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: Vpc8378EB38
      InternetGatewayId:
        Ref: VpcIGWD7BA715C
    Metadata:
      aws:cdk:path: ImmersiondayStack/Vpc/VPCGW
  VpcvpciessmSecurityGroupE08D900B:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ImmersiondayStack/Vpc/vpcie_ssm/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp:
            Fn::GetAtt:
              - Vpc8378EB38
              - CidrBlock
          Description:
            Fn::Join:
              - ""
              - - "from "
                - Fn::GetAtt:
                    - Vpc8378EB38
                    - CidrBlock
                - :443
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      Tags:
        - Key: Name
          Value: ImmersiondayStack/Vpc
      VpcId:
        Ref: Vpc8378EB38
    Metadata:
      aws:cdk:path: ImmersiondayStack/Vpc/vpcie_ssm/SecurityGroup/Resource
  Vpcvpciessm0D87ECE8:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName:
        Fn::Join:
          - ""
          - - com.amazonaws.
            - Ref: AWS::Region
            - .ssm
      VpcId:
        Ref: Vpc8378EB38
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - Fn::GetAtt:
            - VpcvpciessmSecurityGroupE08D900B
            - GroupId
      SubnetIds:
        - Ref: VpcprivateSubnet1SubnetCEAD3716
        - Ref: VpcprivateSubnet2Subnet2DE7549C
      VpcEndpointType: Interface
    Metadata:
      aws:cdk:path: ImmersiondayStack/Vpc/vpcie_ssm/Resource
  VpcvpciessmmessagesSecurityGroup56AD3D24:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ImmersiondayStack/Vpc/vpcie_ssm_messages/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp:
            Fn::GetAtt:
              - Vpc8378EB38
              - CidrBlock
          Description:
            Fn::Join:
              - ""
              - - "from "
                - Fn::GetAtt:
                    - Vpc8378EB38
                    - CidrBlock
                - :443
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      Tags:
        - Key: Name
          Value: ImmersiondayStack/Vpc
      VpcId:
        Ref: Vpc8378EB38
    Metadata:
      aws:cdk:path: ImmersiondayStack/Vpc/vpcie_ssm_messages/SecurityGroup/Resource
  Vpcvpciessmmessages50FB7A49:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName:
        Fn::Join:
          - ""
          - - com.amazonaws.
            - Ref: AWS::Region
            - .ssmmessages
      VpcId:
        Ref: Vpc8378EB38
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - Fn::GetAtt:
            - VpcvpciessmmessagesSecurityGroup56AD3D24
            - GroupId
      SubnetIds:
        - Ref: VpcprivateSubnet1SubnetCEAD3716
        - Ref: VpcprivateSubnet2Subnet2DE7549C
      VpcEndpointType: Interface
    Metadata:
      aws:cdk:path: ImmersiondayStack/Vpc/vpcie_ssm_messages/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAA/12PQWvDMAyFf0vvrtuuMNhtJZTSywjJ6N1RFKq1lYMtr4SQ/z47XWfYSc+fnh9PG73ZrvV68W7ufgntZTWCdajHWgxcVIXeBgeoCsteXABRRceZdhwXLQlZnlRKQHjR46mHtDqVhSpDcyWoQ8M4f82qskHw0zRXzDyznfcWyKTgP3MS+2OZxoeRgxG8m0GVjr6jzMFHFnRRPw2PJr+vncS7zjdkUbOvM4Cx7p7b3lKENUJwJMPB2dDPxf6DmPV0T5MqBzlbXm31m35dfHmipQssdENdPeYP4Svc/2ABAAA=
    Metadata:
      aws:cdk:path: ImmersiondayStack/CDKMetadata/Default
    Condition: CDKMetadataAvailable
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - af-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
